# t1-dashboard

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2018-09-08-164539_create_entries/: down.sql  up.sql
resources/: schema.sql
src/: main.rs  models.rs  schema.rs
