[package]
name = "t1-dashboard"
version = "0.1.0"
authors = ["Julius de Bruijn <julius@nauk.io>"]

[dependencies]
tokio = "0.1"
futures = "0.1"
warp = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
pretty_env_logger = "0.2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
diesel = { version = "1.3", features = ["postgres", "extras"] }
diesel_derives = "1.3"
dotenv = "0.9"